Fix UUID generator for mongodb

--- a/Automation/Automation.App/App.xaml
+++ b/Automation/Automation.App/App.xaml
@@ -28,6 +28,7 @@
 
             <jouffluConverters:BooleanConverter x:Key="BooleanConverter" />
             <jouffluConverters:BooleanFlipConverter x:Key="BooleanFlipConverter" />
+            <jouffluConverters:VisibilityConverter x:Key="VisibilityConverter" />
 
             <!--  Adonis customization  -->
             <CornerRadius x:Key="{x:Static adonisUi:Dimensions.CornerRadius}">2</CornerRadius>
