--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
@@ -14,132 +14,145 @@
     mc:Ignorable="d"
     MinWidth="300"
     MinHeight="180">
-    <Grid Margin="2" DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:TaskEditModal}}">
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Vertical">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:TaskEditModal}}">
+        <Grid Margin="2">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
 
-            <layouts:FlexibleGrid
-                Columns="2"
-                ColumnsWidth="*,80"
-                Gap="2">
+            <StackPanel Orientation="Vertical">
 
-                <TextBlock Margin="0,8,0,4" FontWeight="Bold">Name</TextBlock>
-                <Grid>
+                <layouts:FlexibleGrid
+                    Columns="2"
+                    ColumnsWidth="*,80"
+                    Gap="2">
+
+                    <TextBlock Margin="0,8,0,4" FontWeight="Bold">Name</TextBlock>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Margin="0,8,0,4" FontWeight="Bold">Icon</TextBlock>
+                        <Button
+                            Click="ButtonEditColor_Click"
+                            Grid.Column="1"
+                            Style="{StaticResource IconButtonSmall}">
+                            <fonts:Icon Text="{x:Static fonts:IconFont.Palette}" />
+                        </Button>
+                        <Button
+                            Margin="2,0,0,0"
+                            Click="ButtonEditIcon_Click"
+                            Grid.Column="2"
+                            Style="{StaticResource IconButtonSmall}">
+                            <fonts:Icon Text="{x:Static fonts:IconFont.Pen}" />
+                        </Button>
+                    </Grid>
+
+                    <TextBox Text="{Binding Task.Metadata.Name}" />
+                    <components:ScopedIcon Metadata="{Binding Task.Metadata}" FontSize="18" />
+                </layouts:FlexibleGrid>
+
+                <Grid Margin="0,8,0,4">
+
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Margin="0,8,0,4" FontWeight="Bold">Icon</TextBlock>
-                    <Button
-                        Click="ButtonEditColor_Click"
-                        Grid.Column="1"
-                        Style="{StaticResource IconButtonSmall}">
-                        <fonts:Icon Text="{x:Static fonts:IconFont.Palette}" />
-                    </Button>
-                    <Button
-                        Margin="2,0,0,0"
-                        Click="ButtonEditIcon_Click"
-                        Grid.Column="2"
-                        Style="{StaticResource IconButtonSmall}">
-                        <fonts:Icon Text="{x:Static fonts:IconFont.Pen}" />
-                    </Button>
-                </Grid>
 
-                <TextBox Text="{Binding Task.Metadata.Name}" />
-                <components:ScopedIcon Metadata="{Binding Task.Metadata}" FontSize="18" />
-            </layouts:FlexibleGrid>
-
-            <Grid Margin="0,8,0,4">
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="auto" />
-                </Grid.ColumnDefinitions>
-
-                <TextBlock FontWeight="Bold" VerticalAlignment="Center">
-                    Package
-                </TextBlock>
-                <Button Grid.Column="1" Click="RemovePackage_Click">
-                    <Button.Style>
-                        <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Task.Target}" Value="{x:Null}">
-                                    <Setter Property="Visibility" Value="Collapsed" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>
-                    <StackPanel Orientation="Horizontal">
-                        <fonts:Icon Text="{x:Static fonts:IconFont.LinkSlash}" />
-                        <TextBlock Margin="4,0,0,0">Remove</TextBlock>
-                    </StackPanel>
-                </Button>
-            </Grid>
-
-            <Grid>
-                <GroupBox>
-                    <GroupBox.Style>
-                        <Style TargetType="GroupBox" BasedOn="{StaticResource {x:Type GroupBox}}">
-                            <Setter Property="Visibility" Value="Collapsed" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Task.Target}" Value="{x:Null}">
-                                    <Setter Property="Visibility" Value="Visible" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </GroupBox.Style>
-                    <Button
-                        Click="SelectPackage_Click"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-
+                    <TextBlock FontWeight="Bold" VerticalAlignment="Center">
+                        Package
+                    </TextBlock>
+                    <Button Grid.Column="1" Click="RemovePackage_Click">
+                        <Button.Style>
+                            <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Task.Target}" Value="{x:Null}">
+                                        <Setter Property="Visibility" Value="Collapsed" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
                         <StackPanel Orientation="Horizontal">
-                            <fonts:Icon Text="{x:Static fonts:IconFont.MagnifyingGlass}" />
-                            <TextBlock Margin="4,0,0,0">
-                                Select
-                            </TextBlock>
+                            <fonts:Icon Text="{x:Static fonts:IconFont.LinkSlash}" />
+                            <TextBlock Margin="4,0,0,0">Remove</TextBlock>
                         </StackPanel>
                     </Button>
-                </GroupBox>
+                </Grid>
 
                 <Grid>
-                    <Grid.Style>
-                        <Style TargetType="Grid">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Task.Target}" Value="{x:Null}">
-                                    <Setter Property="Visibility" Value="Collapsed" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Grid.Style>
+                    <GroupBox>
+                        <GroupBox.Style>
+                            <Style TargetType="GroupBox" BasedOn="{StaticResource {x:Type GroupBox}}">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Task.Target}" Value="{x:Null}">
+                                        <Setter Property="Visibility" Value="Visible" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </GroupBox.Style>
+                        <Button
+                            Click="SelectPackage_Click"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
 
-                    <packageComponents:TargetPackageSummary TargetPackage="{Binding Task.Package}" />
+                            <StackPanel Orientation="Horizontal">
+                                <fonts:Icon Text="{x:Static fonts:IconFont.MagnifyingGlass}" />
+                                <TextBlock Margin="4,0,0,0">
+                                    Select
+                                </TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </GroupBox>
+
+                    <Grid>
+                        <Grid.Style>
+                            <Style TargetType="Grid">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Task.Target}" Value="{x:Null}">
+                                        <Setter Property="Visibility" Value="Collapsed" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Style>
+
+                        <packageComponents:TargetPackageSummary TargetPackage="{Binding Task.Target.Package}" />
+                    </Grid>
                 </Grid>
-            </Grid>
-        </StackPanel>
+            </StackPanel>
 
-        <StackPanel
-            Orientation="Horizontal"
-            Grid.Row="1"
-            HorizontalAlignment="Right"
-            Margin="0,2,0,0">
-            <Button Margin="2,0" Command="{Binding ParentLayout.HideCommand}">
-                <StackPanel Orientation="Horizontal">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Xmark}" />
-                    <TextBlock Margin="4,0,0,0">Cancel</TextBlock>
-                </StackPanel>
-            </Button>
-            <Button Command="{Binding ValidateCommand}" IsEnabled="{Binding Task.Metadata.IsReadOnly, Converter={StaticResource BooleanFlipConverter}}">
-                <StackPanel Orientation="Horizontal">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.FloppyDisk}" />
-                    <TextBlock Margin="4,0,0,0">Save changes</TextBlock>
-                </StackPanel>
-            </Button>
-        </StackPanel>
+            <StackPanel
+                Orientation="Horizontal"
+                Grid.Row="1"
+                HorizontalAlignment="Right"
+                Margin="0,2,0,0">
+                <Button Margin="2,0" Command="{Binding ParentLayout.HideCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <fonts:Icon Text="{x:Static fonts:IconFont.Xmark}" />
+                        <TextBlock Margin="4,0,0,0">Cancel</TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button Command="{Binding ValidateCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <fonts:Icon Text="{x:Static fonts:IconFont.FloppyDisk}" />
+                        <TextBlock Margin="4,0,0,0">Save changes</TextBlock>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+        </Grid>
+
+        <Border Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}" Visibility="{Binding Task.Metadata.IsReadOnly, Converter={StaticResource VisibilityConverter}}">
+            <TextBlock
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                FontWeight="Bold">
+                This task is readonly.
+            </TextBlock>
+        </Border>
+
     </Grid>
 </UserControl>
