--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditor.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditor.xaml
@@ -110,6 +110,6 @@
             </nodify:NodifyEditor>
             <Grid Panel.ZIndex="-2" Background="{StaticResource LargeGridLinesDrawingBrush}" />
         </Grid>
-        <local:GraphEditorOverlay Editor="{Binding}" />
+        <local:GraphEditorOverlay Ui="{Binding ElementName=ContainerElement}" Editor="{Binding}" />
     </Grid>
 </UserControl>
