--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
@@ -16,7 +16,6 @@
     mc:Ignorable="d"
     MinWidth="300"
     MinHeight="180">
-
     <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:TaskEditModal}}">
         <Grid Margin="2">
             <Grid.RowDefinitions>
@@ -25,41 +24,7 @@
             </Grid.RowDefinitions>
 
             <StackPanel Orientation="Vertical">
-
-                <layouts:FlexibleGrid
-                    Columns="2"
-                    ColumnsWidth="*,80"
-                    Gap="2">
-
-                    <TextBlock Margin="0,8,0,4" FontWeight="Bold">Name</TextBlock>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Margin="0,8,0,4" FontWeight="Bold">Icon</TextBlock>
-                        <Button
-                            Click="ButtonEditColor_Click"
-                            Grid.Column="1"
-                            Style="{StaticResource IconButtonSmall}">
-                            <fonts:Icon Text="{x:Static fonts:IconFont.Palette}" />
-                        </Button>
-                        <Button
-                            Margin="2,0,0,0"
-                            Click="ButtonEditIcon_Click"
-                            Grid.Column="2"
-                            Style="{StaticResource IconButtonSmall}">
-                            <fonts:Icon Text="{x:Static fonts:IconFont.Pen}" />
-                        </Button>
-                    </Grid>
-
-                    <TextBox Text="{Binding Task.Metadata.Name}" />
-                    <components:ScopedIcon Metadata="{Binding Task.Metadata}" FontSize="18" />
-                </layouts:FlexibleGrid>
-
-                <TextBlock Margin="0,8,0,4" FontWeight="Bold">Tags</TextBlock>
-                <jouffluInputs:ComboBoxTags AllowAdd="True" SelectedItems="{Binding Task.Tags}" />
+                <components:MetadataEdit Metadata="{Binding Task.Metadata}" />
 
                 <Grid Margin="0,8,0,4">
                     <Grid.ColumnDefinitions>
